--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-notifications": "^0.11.6",
     "expo-permissions": "~12.0.1",
     "expo-status-bar": "~1.0.4",
+    "exponent": "^14.0.0",
     "firebase": "^8.6.8",
     "firesql": "^2.0.2",
     "lodash": "^4.17.21",
@@ -32,6 +33,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-credit-card": "^0.1.9",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-currency-picker": "^1.0.5",
     "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.4.2",
@@ -46,6 +49,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
