--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-credit-card": "^0.1.9",
     "react-native-credit-card-input": "^0.4.1",
@@ -49,6 +50,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.1",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.13.12"
   },
