--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-chart-kit": "^6.11.0",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-credit-card": "^0.1.9",
     "react-native-credit-card-input": "^0.4.1",
@@ -42,6 +43,7 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "^0.28.0",
+    "react-native-modal": "^12.0.2",
     "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-open-maps": "^0.3.6",
     "react-native-paper": "^4.9.2",
